--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
 deploy:
   provider: pages
   skip-cleanup: true
-  github-token: $GITHUB_TOKEN # github 上的token环境变量
+  github-token: 7058878b4ddecda2e64b0c41d606ccd73ad64800 # github 上的token环境变量
   local-dir: ./_book/ ## 根据情况自定义到静态文件输出目录
   target-branch: gh-pages
   verbose: true
