--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,8 @@ script:
 - gitbook build
 deploy:
   provider: pages
-  skip-cleanup: true
-  github-token: 7058878b4ddecda2e64b0c41d606ccd73ad64800 # github 上的token环境变量
-  local-dir: ./_book/ ## 根据情况自定义到静态文件输出目录
-  target-branch: gh-pages
-  verbose: true
+  skip_cleanup: true
+  github_token: 7058878b4ddecda2e64b0c41d606ccd73ad64800  # Set in the settings page of your repository, as a secure variable
+  keep_history: true
   on:
-    branch: master
+    branch: main
